--- a/sso-client/src/main/resources/application.properties
+++ b/sso-client/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=8080
 
 
-wy.sso.client.ssoServerUrl=http://127.0.0.1/login
+wy.sso.server.ssoServerUrl=http://127.0.0.1
+wy.sso.server.loginUri=/login
+wy.sso.server.logoutUri=/logout
 wy.sso.client.appCode=client-one
 wy.sso.client.includedPaths=
 wy.sso.client.excludedPaths=
