--- a/sso-core/sso-core/pom.xml
+++ b/sso-core/sso-core/pom.xml
@@ -53,6 +53,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.2</version>
+            <scope>provided</scope>
+        </dependency>
+
 
     </dependencies>
 
