--- a/sso-client/src/main/resources/application.properties
+++ b/sso-client/src/main/resources/application.properties
@@ -1,9 +1,16 @@
-server.port=8080
+server.port=8090
 
-
-wy.sso.server.ssoServerUrl=http://127.0.0.1
+# SSO服务器地址
+wy.sso.server.serverUrl=http://127.0.0.1
+# SSO服务登录URI
 wy.sso.server.loginUri=/login
+# SSO服务登出URI
 wy.sso.server.logoutUri=/logout
-wy.sso.client.appCode=client-one
+# 是否启用SSO拦截器,boolean类型
+wy.sso.client.enable=true
+# 接入SSO的当前应用系统的应用ID
+wy.sso.client.appId=client-one
+# SSO登录拦截器拦截当前系统URI,默认为/**
 wy.sso.client.includedPaths=
+# SSO登录拦截器放行当前系统URI
 wy.sso.client.excludedPaths=
